unpackaged/main/default/objects/inov8__PMT_Task__c/inov8__PMT_Task__c.object-meta.xml
<CustomObject>
    <description>An activity that has been assigned to a User.</description>
    <label>PMT Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMT Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>