unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>inov8__Assigned_To_Email__c</fullName>
    <formula>inov8__Assigned_To1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Email</label>
    <type>Text</type>
</CustomField>