unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Days_Late__c.field-meta.xml
<CustomField>
    <fullName>inov8__Days_Late__c</fullName>
    <formula>IF( ISPICKVAL(inov8__Status__c,&#39;Completed&#39;) || ISPICKVAL(inov8__Status__c,&#39;Closed, not Completed&#39;),0, Today() - inov8__Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>