unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>inov8__Due_Date__c</fullName>
    <inlineHelpText>The date this task is due to be completed</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>