unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Duration__c.field-meta.xml
<CustomField>
    <fullName>inov8__Duration__c</fullName>
    <formula>inov8__Due_Date__c - inov8__Start_Date__c+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>