unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__My_Task__c.field-meta.xml
<CustomField>
    <fullName>inov8__My_Task__c</fullName>
    <formula>IF(inov8__Assigned_To1__c = $User.Id , &quot;me&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Task</label>
    <type>Text</type>
</CustomField>