unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>inov8__On_Hold_Reason__c</fullName>
    <inlineHelpText>If blocked, why?</inlineHelpText>
    <label>On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>