unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Percentage_Completion__c.field-meta.xml
<CustomField>
    <fullName>inov8__Percentage_Completion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Completion %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>