unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Project_Id__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project_Id__c</fullName>
    <formula>CASESAFEID(inov8__Phase__r.inov8__Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>