unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/PMT_Project__c/&quot; &amp; inov8__Phase__r.inov8__Project__c &amp; &quot;/view&quot;, inov8__Phase__r.inov8__Project__r.Name,&#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>