unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Sign_off_status__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sign_off_status__c</fullName>
    <label>Sign-off status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>