unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_Date__c</fullName>
    <inlineHelpText>When should this task start by?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>