unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>inov8__Status_Icon__c</fullName>
    <formula>IF(AND(inov8__Days_Late__c &gt;0,TEXT(inov8__Status__c) &lt;&gt; &quot;On Hold&quot;),IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_warning_60.png&quot;,&quot;Late&quot;,20,20), 
IF( TEXT(inov8__Sign_off_status__c) = &quot;Approved&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_approval.png&quot;,&quot;Approved&quot;,20,20), 
CASE( TEXT(inov8__Status__c) , 
&quot;Not Started&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_routing_offline_60.png&quot;,&quot;Incomplete&quot;,20,20), 
&quot;In Progress&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Clock.png&quot;,&quot;In Progress&quot;,20,20), 
&quot;On Hold&quot;,IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_error_60.png&quot;,&quot;On Hold&quot;,20,20), 
IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_success_60.png&quot;,&quot;Closed&quot;,20,20))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>