unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Task_Level__c.field-meta.xml
<CustomField>
    <fullName>inov8__Task_Level__c</fullName>
    <label>Task Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>