unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Task_Name_w_Alert__c.field-meta.xml
<CustomField>
    <fullName>inov8__Task_Name_w_Alert__c</fullName>
    <formula>inov8__Status_Icon__c &amp;&quot; &quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Name w. Alert</label>
    <type>Text</type>
</CustomField>