unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Topic__c.field-meta.xml
<CustomField>
    <fullName>inov8__Topic__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>