unpackaged/main/default/objects/inov8__PMT_Task__c/fields/inov8__Weighted_percentage__c.field-meta.xml
<CustomField>
    <fullName>inov8__Weighted_percentage__c</fullName>
    <formula>inov8__Duration__c *  inov8__Percentage_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>