unpackaged/main/default/objects/inov8__PMT_Task__c/validationRules/inov8__Task_On_hold_Reason_not_null_if_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__Task_On_hold_Reason_not_null_if_On_Hold</fullName>
    <active>true</active>
    <description>Task On hold Reason Mandatory if Task Status is &#39;On Hold&#39;</description>
    <errorConditionFormula>(TEXT(inov8__Status__c)=&#39;On Hold&#39;) &amp;&amp; ISBLANK(inov8__On_Hold_Reason__c)</errorConditionFormula>
    <errorMessage>On Hold Reason should not be Blank if Status is &#39;On Hold&#39;.</errorMessage>
</ValidationRule>