unpackaged/main/default/objects/inov8__PMT_Task__c/listViews/inov8__My_Open_Tasks_2.listView-meta.xml
<ListView>
    <fullName>inov8__My_Open_Tasks_2</fullName>
    <columns>inov8__Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>inov8__Percentage_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inov8__My_Task__c</field>
        <operation>equals</operation>
        <value>me</value>
    </filters>
    <filters>
        <field>inov8__Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,On Hold</value>
    </filters>
    <label>My Open Tasks</label>
</ListView>